qulity of life updeted v1

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-        <link rel="icon" type="image/png" href="/game.png" />
-   
+    <link rel="icon" type="image/png" href="/game.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="text-center bg-gradient-to-br from-purple-900 via-black to-blue-900 font-doto text-white ">
+  <body
+    class="text-center bg-gradient-to-br from-purple-900 via-black to-blue-900 font-doto text-white"
+    style="
+      background: linear-gradient(
+        120deg,
+        #081427 0%,
+        #11334f 40%,
+        #18afff 75%,
+        #68f7ff 100%
+      );
+      background-size: cover;
+    "
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
